--- a/.github/workflows/lint-test.yaml
+++ b/.github/workflows/lint-test.yaml
@@ -34,7 +34,7 @@ jobs:
 
       - name: Run chart-testing (lint)
         if: steps.list-changed.outputs.changed == 'true' || github.event_name == 'workflow_dispatch'
-        run: ct lint --target-branch ${{ github.event.repository.default_branch }} --chart-dirs charts
+        run: ct lint --target-branch ${{ github.event.repository.default_branch }} --chart-dirs charts --all
 
       - name: Create kind cluster
         if: steps.list-changed.outputs.changed == 'true' || github.event_name == 'workflow_dispatch'
@@ -42,4 +42,4 @@ jobs:
 
       - name: Run chart-testing (install)
         if: steps.list-changed.outputs.changed == 'true' || github.event_name == 'workflow_dispatch'
-        run: ct install --target-branch ${{ github.event.repository.default_branch }} --chart-dirs charts
+        run: ct install --target-branch ${{ github.event.repository.default_branch }} --chart-dirs charts --all
