--- a/.github/workflows/lint-test.yaml
+++ b/.github/workflows/lint-test.yaml
@@ -42,4 +42,4 @@ jobs:
 
       - name: Run chart-testing (install)
         if: steps.list-changed.outputs.changed == 'true' || github.event_name == 'workflow_dispatch'
-        run: ct install --target-branch ${{ github.event.repository.default_branch }} --chart-dirs charts --all
+        run: ct install --target-branch ${{ github.event.repository.default_branch }} --chart-dirs charts ${{ (github.event_name != 'workflow_dispatch' || '--all') || '' }}
