fix: added maintainers

--- a/charts/qubership-jaeger/Chart.yaml
+++ b/charts/qubership-jaeger/Chart.yaml
@@ -17,3 +17,5 @@ appVersion: 2.2.0
 maintainers:
   - name: borislavr
     email: boris.lavr@gmail.com
+  - name: asatt
+    email: oneasat@gmail.com
