--- a/.github/workflows/automatic-pr-labeler.yaml
+++ b/.github/workflows/automatic-pr-labeler.yaml
@@ -5,7 +5,7 @@ on:
   pull_request:
     branches: [main]
     types:
-      [opened, reopened, synchrinize]
+      [opened, reopened, synchronize]
 
 jobs:
   assign-labels:
