--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,5 +23,13 @@ jobs:
           and ($platforms | type == "string");
           verify_structure
           | if . then true else false end')
+          if [ ${verify} == 'true' ]; then
+            echo "file is valid"
+            components=$(jq -c ".components" "$GITHUB_WORKSPACE/.github/docker-build-config.json")
+            platforms=$(jq -c ".platforms | join(\",\")" "$GITHUB_WORKSPACE/.github/docker-build-config.json")
+          else
+            echo "file is invalid"
+            exit 1
+          fi
           echo "components=${components}"
           echo "platforms=${platforms}"
