--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,7 +11,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-
+      - name: "tree"
+        run: tree ${GITHUB_WORKSPACE}/
       - name: Load Docker Configuration
         id: load_component
         run:  |
