fix: added dockerhub creds

--- a/.github/workflows/docker-scout.yaml
+++ b/.github/workflows/docker-scout.yaml
@@ -33,6 +33,7 @@ jobs:
           image: ${{ matrix.image }}
           sarif-file: sarif.output.json
           summary: true
+          ignore-base: true
           dockerhub-user: ${{ secrets.DOCKER_IO_USER }}
           dockerhub-password: ${{ secrets.DOCKER_IO_PASSWORD }}
 
