--- a/.github/workflows/docker-scout.yaml
+++ b/.github/workflows/docker-scout.yaml
@@ -1,6 +1,8 @@
 name: "Docker Scout report"
 on:
   workflow_dispatch
+permissions:
+  contents: read
 jobs:
   prepare:
     runs-on: ubuntu-latest
@@ -17,6 +19,9 @@ jobs:
           echo "baseimages=${baseimages}"
           echo "baseimages=${baseimages}" >> $GITHUB_OUTPUT
   report:
+    permissions:
+      contents: read
+      security-events: write
     runs-on: ubuntu-latest
     needs: prepare
     if: ${{ needs.prepare.outputs.baseimages != '' }}
