--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,17 +37,23 @@ jobs:
     runs-on: ubuntu-latest
     name: ${{ matrix.component.name }}
     steps:
-    - name: Checkout
-      uses: actions/checkout@v4
-    - name: Set up QEMU
-      uses: docker/setup-qemu-action@v3
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v3
-    - name: Build and push
-      uses: docker/build-push-action@v6
+    # - name: Checkout
+    #   uses: actions/checkout@v4
+    # - name: Set up QEMU
+    #   uses: docker/setup-qemu-action@v3
+    # - name: Set up Docker Buildx
+    #   uses: docker/setup-buildx-action@v3
+    # - name: Build and push
+    #   uses: docker/build-push-action@v6
+    #   with:
+    #     no-cache: true
+    #     context: ${{ matrix.component.context }}
+    #     file: ${{ matrix.component.file }}
+    #     platforms: linux/amd64
+    #     push: false
+    - name: Build ${{ matrix.component.name }}
+      uses: netcracker/qubership-workflow-hub/actions/docker-action@main
       with:
-        no-cache: true
-        context: ${{ matrix.component.context }}
-        file: ${{ matrix.component.file }}
-        platforms: linux/amd64
-        push: false
+        ref: ${{ github.event.ref }}
+        component: '[{"name": "${{ matrix.component.name }}", "file": "${{ matrix.component.file }}", "context": "${{ matrix.component.context }}"}]'
+
