fix: added packages permissions

--- a/.github/workflows/jaeger-release.yaml
+++ b/.github/workflows/jaeger-release.yaml
@@ -67,6 +67,7 @@ jobs:
   prepare-chart-and-tag:
     permissions:
       contents: write
+      packages: write
     needs: [check-tag]
     runs-on: ubuntu-latest
     steps:
