--- a/.github/workflows/jaeger-release.yaml
+++ b/.github/workflows/jaeger-release.yaml
@@ -146,7 +146,7 @@ jobs:
         echo "[DEBUG] Metadata files: ${meta_data_files}"
         pip install .
         export PYTHONPATH=src
-        python3 -m app_manifest_cli.cli  generate --config ../current-repo/.github/qubership-jaeger-am-build.yaml ${meta_data_files}
+        python3 -m app_manifest_cli.cli  generate --config ../current-repo/.github/qubership-jaeger-am-build.yaml --version ${{ inputs.version }} ${meta_data_files}
     - name: Upload AM
       uses: actions/upload-artifact@v4
       with:
