--- a/.github/qubership-jaeger-am-build.yaml
+++ b/.github/qubership-jaeger-am-build.yaml
@@ -18,4 +18,15 @@ components:
       - name: spark-dependencies
         mimeType: application/vnd.docker.image
         reference: ghcr.io/jaegertracing/spark-dependencies/spark-dependencies:v0.5.1
-
+  - name: jaeger-integration-tests
+    mimeType: application/vnd.docker.image
+    reference: ghcr.io/netcracker/jaeger-integration-tests:0.0.3
+  - name: qubership-deployment-status-provisioner
+    mimeType: application/vnd.docker.image
+    reference: ghcr.io/netcracker/qubership-deployment-status-provisioner:0.2.2
+  - name: jaeger-readiness-probe
+    mimeType: application/vnd.docker.image
+    reference: ghcr.io/netcracker/jaeger-readiness-probe:0.0.3
+  - name: spark-dependencies
+    mimeType: application/vnd.docker.image
+    reference: ghcr.io/jaegertracing/spark-dependencies/spark-dependencies:v0.5.1
