fix: correct output format for app-manifest-path in action.yaml

--- a/.github/actions/app-manifest/action.yaml
+++ b/.github/actions/app-manifest/action.yaml
@@ -23,7 +23,7 @@ inputs:
     type: string
 
 outputs:
-  - name: app-manifest-path
+  app-manifest-path:
     description: "The path to the generated application manifest file"
     value: ${{ steps.generate_app_manifest.outputs.PATH_APP_MANIFEST }}
 runs:
