--- a/.github/workflows/jaeger-release.yaml
+++ b/.github/workflows/jaeger-release.yaml
@@ -122,7 +122,7 @@ jobs:
 
   app-manifest-build:
     runs-on: ubuntu-latest
-    needs: [docker-build]
+    needs: [github-release, docker-build]
     steps:
     - name: "Configure helm"
       uses: azure/setup-helm@v4.3.0
