fix: ensure virtual environment is activated before generating application manifest

--- a/.github/actions/app-manifest/action.yaml
+++ b/.github/actions/app-manifest/action.yaml
@@ -51,6 +51,7 @@ runs:
       working-directory: ${{ github.workspace }}
       id: generate_app_manifest
       run: |
+        source venv/bin/activate
         app-manifest generate \
           --config "${{ inputs.configuration }}" \
           $([[ -n "${{ inputs.output }}" ]] && echo "--output ${{ inputs.output }}") \
