--- a/.github/actions/app-manifest/action.yaml
+++ b/.github/actions/app-manifest/action.yaml
@@ -51,7 +51,7 @@ runs:
       working-directory: ${{ github.workspace }}
       id: generate_app_manifest
       run: |
-        source venv/bin/activate
+        source ./app-manifest-cli/venv/bin/activate
         app-manifest generate \
           --config "${{ inputs.configuration }}" \
           $([[ -n "${{ inputs.output }}" ]] && echo "--output ${{ inputs.output }}") \
