fix: add pip list command to verify installed packages before generating application manifest

--- a/.github/actions/app-manifest/action.yaml
+++ b/.github/actions/app-manifest/action.yaml
@@ -52,6 +52,7 @@ runs:
       id: generate_app_manifest
       run: |
         source ./app-manifest-cli/venv/bin/activate
+        pip list
         app-manifest generate \
           --config "${{ inputs.configuration }}" \
           $([[ -n "${{ inputs.output }}" ]] && echo "--output ${{ inputs.output }}") \
