--- a/.github/workflows/jaeger-release.yaml
+++ b/.github/workflows/jaeger-release.yaml
@@ -155,7 +155,7 @@ jobs:
 
     - name: Generate AM
       id: generate_am
-      uses: ./.github/actions/app-manifest
+      uses: borislavr/qubership-app-manifest-cli/.github/actions/app-manifest@refactoring
       with:
         configuration: ./.github/qubership-jaeger-am-build.yaml
         # output: ./cli/jaeger-application-manifest-v${{ inputs.version }}.json
