--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,17 +3,6 @@ name: Build Artifacts
 
 on:
   workflow_dispatch:
-  # push:
-  #   branches:
-  #   - '**'
-  #   paths-ignore:
-  #   - '.github/**'
-  #   - 'docs/**'
-  #   - 'CODE-OF-CONDUCT.md'
-  #   - 'CONTRIBUTING.md'
-  #   - 'LICENSE'
-  #   - 'README.md'
-  #   - 'SECURITY.md'
 
 concurrency:
   group: ${{ format('test-build-{0}', github.ref) }}
@@ -37,23 +26,45 @@ jobs:
     runs-on: ubuntu-latest
     name: ${{ matrix.component.name }}
     steps:
-    # - name: Checkout
-    #   uses: actions/checkout@v4
-    # - name: Set up QEMU
-    #   uses: docker/setup-qemu-action@v3
-    # - name: Set up Docker Buildx
-    #   uses: docker/setup-buildx-action@v3
-    # - name: Build and push
-    #   uses: docker/build-push-action@v6
-    #   with:
-    #     no-cache: true
-    #     context: ${{ matrix.component.context }}
-    #     file: ${{ matrix.component.file }}
-    #     platforms: linux/amd64
-    #     push: false
     - name: Build ${{ matrix.component.name }}
       uses: netcracker/qubership-workflow-hub/actions/docker-action@main
       with:
         ref: ${{ github.event.ref }}
         component: '[{"name": "${{ matrix.component.name }}", "file": "${{ matrix.component.file }}", "context": "${{ matrix.component.context }}"}]'
 
+  app-manifest-build:
+    runs-on: ubuntu-latest
+    needs: [multiplatform_build]
+    steps:
+    - name: "Configure helm"
+      uses: azure/setup-helm@v4.3.0
+    - name: Checkout code
+      uses: actions/checkout@v5
+      with:
+        ref: v${{ inputs.version }}
+
+    - name: Download metadata
+      uses: actions/download-artifact@v5
+      with:
+        path: "./cli/meta-data-files"
+        merge-multiple: true
+        pattern: "*.json"
+    - name: Collect metadata files
+      run: |
+        meta_data_files=""
+        for file in ./cli/meta-data-files/*.json; do
+          meta_data_files="$meta_data_files $file"
+        done
+        echo "[DEBUG] Metadata files: ${meta_data_files}"
+        echo "META_DATA_FILES=${meta_data_files}" >> $GITHUB_ENV
+
+    - name: Generate AM
+      id: generate_am
+      uses: borislavr/qubership-app-manifest-cli/.github/actions/app-manifest@refactoring
+      with:
+        configuration: ./.github/qubership-jaeger-am-build.yaml
+        # output: ./cli/jaeger-application-manifest-v${{ inputs.version }}.json
+        version: ${{ inputs.version }}
+        # name: jaeger
+        meta-data-files: ${{ env.META_DATA_FILES }}
+        cli-version: refactoring
